--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
     "@angular/fire": "^6.0.2",
     "@capacitor/android": "^2.4.1",
     "@capacitor/core": "2.4.1",
+    "@ionic-native/toast": "^5.28.0",
     "@ionic/react": "^5.0.7",
     "@ionic/react-router": "^5.0.7",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.3",
     "@types/jest": "^24.0.25",
+    "@types/jquery": "^3.5.1",
     "@types/node": "^12.12.24",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "cordova-plugin-x-toast": "^2.7.2",
     "firebase": "^7.20.0",
     "ionicons": "^5.0.0",
+    "jquery": "^3.5.1",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
